@@ -1,0 +1,45 @@
+<printer id="printer/Epson-PM_3700C">
+  <make>Epson</make>
+  <model>PM_3700C</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>2880</x>
+        <y>720</y>
+      </dpi>
+    </resolution>
+    <consumables>
+    <!--no comments--><!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <!--no url-->
+  <lang>
+    <escp/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>A</functionality>
+  
+  <driver>gimp-print</driver>
+  <!--verified-->
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    Probably the japanese equivalent of the Stylus Photo 1280/1290.&lt;p&gt;
+
+    48 nozzles per color; 6 color CMYKcm process.&lt;p&gt;
+
+    USB and Parallel.&lt;p&gt;
+
+    13 inch wide paper path.&lt;p&gt;
+
+    4 picoliter dots.
+
+    </en>
+  </comments>
+</printer>
