@@ -1,0 +1,37 @@
+<printer id="printer/Epson-PM_870C">
+  <make>Epson</make>
+  <model>PM 870C</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>2880</x>
+        <y>720</y>
+      </dpi>
+    </resolution>
+    <consumables>
+    <!--no comments--><!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <escp/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>B</functionality>
+  <driver>gimp-print</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    Probably japanese equivalent of the Epson Stylus Photo 915 or 925.&lt;p&gt;
+
+    6-color CMYKcm printing.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
