@@ -1,0 +1,45 @@
+<printer id="printer/Epson-PM_930C">
+  <make>Epson</make>
+  <model>PM 930C</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>2880</x>
+        <y>2880</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>
+	6 separate ink tanks: Cyan, light cyan, magenta, light magenta,
+	yellow, black
+	</en>
+      </comments>
+    </consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <escp/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>F</functionality>
+  <driver>gimp-print</driver>
+  <!--verified-->
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+      Only available in Japan.&lt;p&gt;
+
+      6-ink (CcMmYK) high-end photo printer with 1.8 pl minimum drop
+      size.&lt;p&gt;
+    
+    </en>
+  </comments>
+</printer>
