@@ -1,3 +1,9 @@
+2003-04-09  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Epson-CL_760.xml, printer/Epson-PM_740C.xml,
+	  printer/Epson-PM_870C.xml, printer/Epson-PM_930C.xml,
+	  printer/Epson-PM_3700C.xml: Added new japanese printer models.
+	
 2003-04-08  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/source/driver/lxm3200-tweaked.xml: Updated the download URLs.
